--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@metamask/detect-provider": "^2.0.0",
     "@mui/material": "^5.14.18",
     "@web3modal/ethers5": "^3.3.2",
+    "@worldcoin/idkit": "^0.5.1",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
+    "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
