--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,18 @@ dist-ssr
 
 # environment
 .env
+
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
