--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
